--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">cerveja</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_new_pub">NewPubActivity</string>
+    <string name="imgPub">imgPub</string>
 </resources>
